--- a/index.ipynb
+++ b/index.ipynb
@@ -2130,7 +2130,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city['Population'])\n",
+    "    city_area.append(city['Population'])\n",
     "city_populations"
    ]
   },
