--- a/index.ipynb
+++ b/index.ipynb
@@ -2130,8 +2130,8 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_area.append(city['Population'])\n",
-    "city_populations"
+    "    city_areas.append(city['Areas'])\n",
+    "city_popula"
    ]
   },
   {
