Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2131,7 +2131,7 @@
     "city_areas = []\n",
     "for city in cities:\n",
     "    city_areas.append(city['Areas'])\n",
-    "city_popula"
+    "city_areas"
    ]
   },
   {
